# atlas-parser

./: README.md  pyproject.toml
atlas_parser/: __init__.py  __main__.py  base.py  orchestrator.py  writer.py
atlas_parser/azure/: __init__.py  yaml_parser.py
atlas_parser/bitbucket/: __init__.py  yaml_parser.py
atlas_parser/github/: __init__.py  yaml_parser.py
atlas_parser/gitlab/: __init__.py  include_resolver.py  yaml_parser.py
atlas_parser/jenkins/: __init__.py  declarative.py  freestyle.py  scripted.py
tests/: __init__.py  test_azure_bitbucket.py  test_consumer.py  test_github_yaml.py  test_parsers.py  test_writer.py
